--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,26 +7,31 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mi blog </title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/font/flaticon.css">
 </head>
 <body>
     <header>
+        
         <section class="header-icons-container">
             <div class="icons">
-                <a href="">Facebook</a>
-                <a href="">Twitter</a>
-                <a href="">Instagram</a>
-                <a href="">Linkedin</a>
-                <a href="">Youtube</a>
+                <a href="/"> <span class="flaticon-001-facebook"> </span> </a>
+                <a href="/"><span class="flaticon-002-twitter"> </span> </a>
+                <a href="/"><span class="flaticon-011-instagram"> </span> </a>
+                <a href="/"><span class="flaticon-010-linkedin"> </span> </a>
+                <a href="/"><span class="flaticon-008-youtube"> </span> </a>
             </div>
         </section>
+
+
         <nav>
             <section class="nav-logo-container">
-                <a href="">Logo</a>
+                <a href=""> <img src="" alt="Logo de mi blog"> </a>
             </section>
             <section class="profile-link">
                 <a href="perfil.html">Sobre mi</a>
-            </section c>
+            </section>
         </nav>
+ 
     </header>
 </body>
 </html>
