--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/font/flaticon.css">
 </head>
-<body>
+<body class="home-body">
     <header>
         
         <section class="header-icons-container">
@@ -42,5 +42,5 @@
             </button>
         </section>
     </main>
-</body>
+</body cl>
 </html>
