18 - Estilos parte 1 Blog.html

--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/font/flaticon.css">
 </head>
+
 <body>
     <header>
 
@@ -38,32 +40,34 @@
         </section>
         <section class="blogpost-main-container">
             <div class="grid-container">
-                <h3></h3>
+                <h3>Noticias</h3>
                 <article>
                     <h1>
-
+                        Título del blogpost
 
                     </h1>
-                    <p></p>
-                    <p></p>
-                    <p></p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur dicta qui eligendi illo rem
+                        ipsum consequuntur distinctio a alias. Sunt tenetur, obcaecati itaque mollitia at fugiat non
+                        sapiente adipisci assumenda.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis nulla magni explicabo architecto alias? Eveniet molestiae aliquid voluptate sint id dolorum tempora laboriosam ab? Quaerat expedita corrupti atque ducimus nostrum.</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque repudiandae fugit voluptates et quos, possimus recusandae debitis ipsam facilis, praesentium unde explicabo. Nihil, illum. Nisi explicabo nesciunt consequatur magnam quidem!</p>
                 </article>
             </div>
-        </section >
+        </section>
         <section class="contact-main-container">
             <div>
-               <img src="" alt=""> 
-               <div class="contatct-left">
-                   <a href=""></a>
-                   <p></p>
-               </div>
+                <img src="" alt="">
+                <div class="contatct-left">
+                    <a href=""></a>
+                    <p></p>
+                </div>
             </div>
             <div>
                 <img src="" alt="">
                 <div class="contatct-right">
                     <a href=""></a>
                     <p></p>
-                </div >
+                </div>
             </div>
         </section>
     </main>
@@ -71,4 +75,5 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
     </footer>
 </body>
+
 </html>
