--- a/blog.html
+++ b/blog.html
@@ -56,17 +56,17 @@
         </section>
         <section class="contact-main-container">
             <div>
-                <img src="" alt="">
-                <div class="contatct-left">
-                    <a href=""></a>
-                    <p></p>
+                <img src="assets/img/006-like.png" alt="">
+                <div class="contact-left">
+                    <a href="">Contacto</a>
+                    <p> Texto de intro. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
             </div>
             <div>
-                <img src="" alt="">
-                <div class="contatct-right">
-                    <a href=""></a>
-                    <p></p>
+                <img src="assets/img/013-newsletter.png" alt="">
+                <div class="contact-right">
+                    <a href="">Escribe</a>
+                    <p>Texto de intro. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
             </div>
         </section>
