21 - terminando perfil.html

--- a/perfil.html
+++ b/perfil.html
@@ -35,28 +35,53 @@
 
     <main>
         <section class="profile-main-container">
-            <div class="grid-container">
+            <div class="grid-container profile-container">
                 <div>
-                    <img src="" alt="">
+                    <img src="assets/img/perfil.jpg" alt="">
                 </div>
                 <div>
-                    <h2></h2>
-                    <p></p>
+                    <h2>Hola , mi nombre es yeltsin </h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque maiores dolorem totam porro. Quis nesciunt maiores aspernatur eveniet a suscipit? Autem enim, aliquam cupiditate vero consectetur magnam. Commodi, autem inventore!</p>
                 </div>
             </div>
         </section>
         <section class="profile-main-proyects">
-            <div class="profile-main-container">
-                <h3></h3>
-                <div class="proyect-container">
-                    <article>
-                        <h4></h4>
-                        <p></p>
+            <div class="grid-container">
+                <h3>Proyectos</h3>
+                <div class="proyects-main-container">
+                    <article class="proyect-container">
+                        <h4>Titulo</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod illum ut maiores. Suscipit optio vitae tenetur, eos sunt at dolores soluta, quaerat vero perferendis illum provident, unde quibusdam illo repudiandae.</p>
+                    </article>
+                    <article class="proyect-container">
+                        <h4>Titulo</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod illum ut maiores. Suscipit optio vitae tenetur, eos sunt at dolores soluta, quaerat vero perferendis illum provident, unde quibusdam illo repudiandae.</p>
+                    </article>
+                    <article class="proyect-container">
+                        <h4>Titulo</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod illum ut maiores. Suscipit optio vitae tenetur, eos sunt at dolores soluta, quaerat vero perferendis illum provident, unde quibusdam illo repudiandae.</p>
                     </article>
                 </div>
             </div>
 
         </section >
+
+        <section class="contact-main-container">
+            <div>
+                <img src="assets/img/006-like.png" alt="">
+                <div class="contact-left">
+                    <a href="">Contacto</a>
+                    <p> Texto de intro. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+            </div>
+            <div>
+                <img src="assets/img/013-newsletter.png" alt="">
+                <div class="contact-right">
+                    <a href="">Escribe</a>
+                    <p>Texto de intro. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
